--- a/frontend/templates/modal.html
+++ b/frontend/templates/modal.html
@@ -14,7 +14,7 @@
 <div class="modal-content">
     <div class="modal-header">
         <h2 class="modal-title" id="exampleModalLabel" style = "font-weight: bolder">BUS DETAILS</h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" onclick="backFunction()"> 
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
