--- a/frontend/templates/modal.html
+++ b/frontend/templates/modal.html
@@ -39,7 +39,7 @@
         <form action="{{ url_for('book') }}" method="POST">
             <input type="checkbox" id="choice" name="agree" value="yes">
             <label for="choice">I AGREE TO THE TERMS AND CONDITIONS</label><br>
-            <button type="button" class="btn btn-secondary" onclick="backFunction()">Close</button>
+            <button type="button" class="btn btn-secondary" onclick="backFunction()">Cancel</button>
             <button type="button" class="btn btn-danger" onclick="confirmFunction()">Confirm</button>
         </form>
     </div>
